CTS Delighter icon cutoff fixed

--- a/CancerGov/_src/Scripts/NCI/Modules/floatingDelighter/index.scss
+++ b/CancerGov/_src/Scripts/NCI/Modules/floatingDelighter/index.scss
@@ -143,6 +143,7 @@
     &::after {
       content: '';
       @include svg-sprite(search-large);
+      font-size: 1.1em;
       
       @include bp(small) {
         font-size: .7em;
